; ModuleID = '/home/carl/AnghaBench/curl/tests/libtest/extr_lib1560.c_test.c'
source_filename = "/home/carl/AnghaBench/curl/tests/libtest/extr_lib1560.c_test.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [9 x i8] c"success\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @test(i8* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i8*, align 8
  store i8* %0, i8** %3, align 8
  %4 = load i8*, i8** %3, align 8
  %5 = call i64 (...) @scopeid()
  %6 = icmp ne i64 %5, 0
  br i1 %6, label %7, label %8

7:                                                ; preds = %1
  store i32 6, i32* %2, align 4
  br label %30

8:                                                ; preds = %1
  %9 = call i64 (...) @append()
  %10 = icmp ne i64 %9, 0
  br i1 %10, label %11, label %12

11:                                               ; preds = %8
  store i32 5, i32* %2, align 4
  br label %30

12:                                               ; preds = %8
  %13 = call i64 (...) @set_url()
  %14 = icmp ne i64 %13, 0
  br i1 %14, label %15, label %16

15:                                               ; preds = %12
  store i32 1, i32* %2, align 4
  br label %30

16:                                               ; preds = %12
  %17 = call i64 (...) @set_parts()
  %18 = icmp ne i64 %17, 0
  br i1 %18, label %19, label %20

19:                                               ; preds = %16
  store i32 2, i32* %2, align 4
  br label %30

20:                                               ; preds = %16
  %21 = call i64 (...) @get_url()
  %22 = icmp ne i64 %21, 0
  br i1 %22, label %23, label %24

23:                                               ; preds = %20
  store i32 3, i32* %2, align 4
  br label %30

24:                                               ; preds = %20
  %25 = call i64 (...) @get_parts()
  %26 = icmp ne i64 %25, 0
  br i1 %26, label %27, label %28

27:                                               ; preds = %24
  store i32 4, i32* %2, align 4
  br label %30

28:                                               ; preds = %24
  %29 = call i32 @printf(i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str, i64 0, i64 0))
  store i32 0, i32* %2, align 4
  br label %30

30:                                               ; preds = %28, %27, %23, %19, %15, %11, %7
  %31 = load i32, i32* %2, align 4
  ret i32 %31
}

declare dso_local i64 @scopeid(...) #1

declare dso_local i64 @append(...) #1

declare dso_local i64 @set_url(...) #1

declare dso_local i64 @set_parts(...) #1

declare dso_local i64 @get_url(...) #1

declare dso_local i64 @get_parts(...) #1

declare dso_local i32 @printf(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
